# tefnut

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  _template.settings.toml  codecov.yml  deploy.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.sh  sonar-project.properties  tefnut.py
.devcontainer/: devcontainer.json
.github/workflows/: codeql.yml  python-app.yml  python-prod.yml
misc/: Tefnut-1668565120999.json
tefnut/control/: control.py  ecobee.py  humi_pi.py  humi_stub.py  humidificator.py  humidificator_pi.py  humidificator_stub.py  humidifier.py  loop.py  weather.py
tefnut/utils/: constant.py  influx_client.py  logging.py  setting.py
tefnut/webui/: webservice.py
tefnut/webui/static/js/: scripts.js
tefnut/webui/templates/: base.html  error.html  index.html  login.html
tests/: common.py  conftest.py  test_sample.py
tests/control/: test_control.py  test_ecobee.py  test_humidifer.py  test_weather.py
tests/control/fixture/: auth.json  failed_auth.json  thermostat.json  token.json
tests/utils/: test_influx_client.py  test_logging.py  test_settings.py
tests/webui/: test_webservice.py
