[tool.poetry]
name = "tefnut"
version = "1.2.2"
description = "Tefnut is a control system to manage central humidificatior."
authors = ["Marc-Olivier Arsenault <marcolivier.arsenault@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.0"
dynaconf = "*"
python-logging-loki = "*"
influxdb-client = "*"
logging-json = "*"
pyecobee = "*"
psutil = "*"
pytest-cov = "*"
requests-mock = "*"
gitpython = "*"
flask = "*"
flask-login = "*"
pytest-mock = "*"
gunicorn = "*"
flask-apscheduler = "*"
isort = "*"
black = "*"
setuptools = "*"
apscheduler = "*"
werkzeug = "*"


[tool.poetry.group.dev.dependencies]
flake8 = "*"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry_bumpversion.file."VERSION"]
