[project]
name = "tefnut"
version = "1.3.1"
description = "Tefnut is a control system to manage central humidificatior."
readme = "README.md"
requires-python = "==3.13.*"
license = { text = "MIT" }
authors = [
    { name = "Marc-Olivier Arsenault", email = "marcolivier.arsenault@gmail.com" },
]
dependencies = [
    "dynaconf==3.2.12",
    "python-logging-loki==0.3.1",
    "influxdb-client==1.49.0",
    "logging-json==0.6.0",
    "pyecobee==1.3.11",
    "psutil==7.1.2",
    "pytest-cov==7.0.0",
    "requests-mock==1.12.1",
    "gitpython==3.1.45",
    "flask==3.1.2",
    "flask-login==0.6.3",
    "pytest-mock==3.15.1",
    "gunicorn==23.0.0",
    "flask-apscheduler==1.13.1",
    "setuptools==80.9.0",
    "apscheduler==3.11.1",
    "werkzeug==3.1.3",
]

[project.optional-dependencies]
dev = [
    "ruff==0.14.3",
    "pre-commit>=3.7,<5.0",
]
rpi = [
    "RPi.GPIO==0.7.1; platform_system == 'Linux'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
python-preference = "managed"
managed = true
